<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="10sp"
        app:cardElevation="6sp"
        android:layout_margin="10sp"
        android:layout_marginHorizontal="13sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="5sp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_name"
                            android:text="محمد خواستار"
                            android:textSize="14sp"
                            android:padding="5sp"
                            android:textColor="@color/black_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:padding="5sp"
                            android:text="@string/nameUser"
                            android:gravity="center"
                            android:fontFamily="@fonts/IranNastaliq"
                            android:textColor="@color/black_text"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

            </LinearLayout>

            <LinearLayout

                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_phone"
                    android:text="09121763521"
                    android:textSize="14sp"
                    android:padding="5sp"
                    android:textColor="@color/black_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:padding="5sp"
                    android:text="@string/phone"
                    android:gravity="center"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout

                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_adress"
                    android:text="15خرداد کوچه39 پلاک 57"
                    android:textSize="14sp"
                    android:padding="5sp"
                    android:textColor="@color/black_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:padding="5sp"
                    android:text="@string/adress"
                    android:gravity="center"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout

                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_request"
                    android:text="48"
                    android:textSize="14sp"
                    android:padding="5sp"
                    android:textColor="@color/black_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:padding="5sp"
                    android:text="@string/numofRequest"
                    android:gravity="center"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>








        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>