<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_request_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"
        android:outlineSpotShadowColor="#246DFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingVertical="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingHorizontal="7dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsans"
                    android:padding="3dp"
                    android:text="محمد خواستار"
                    android:textColor="@color/black_num"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsans"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/nameUser"
                    android:textColor="@color/black_text"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingHorizontal="7dp">

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsansfanum"
                    android:padding="3dp"
                    android:text="09121763521"
                    android:textColor="@color/black_num"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsans"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/phone"
                    android:textColor="@color/black_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingHorizontal="7dp">

                <TextView
                    android:id="@+id/tv_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsansfanum"
                    android:padding="3dp"
                    android:text="قم،ازادگان،خیابان نواب،کوچه 15"
                    android:textColor="@color/black_num"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsans"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/adress"
                    android:textColor="@color/black_text"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingHorizontal="7dp">

                <TextView
                    android:id="@+id/tv_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsansfanum"
                    android:padding="3dp"
                    android:text="48"
                    android:textColor="@color/black_num"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/irsans"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/numofRequest"
                    android:textColor="@color/black_text"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/linear_massage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_massage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_tv_call_massage"
                        android:drawableLeft="@drawable/ic_chat_black_24dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/irsans"
                        android:gravity="center"
                        android:paddingVertical="2dp"
                        android:text="پیام"
                        android:textColor="@color/blue_bg"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_call"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical">

                    <TextView
                        android:id="@+id/tv_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@drawable/border_tv_call_massage"
                        android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                        android:fontFamily="@font/irsans"
                        android:gravity="center"
                        android:paddingVertical="2dp"
                        android:text="تماس"
                        android:textColor="@color/blue_bg"
                        android:textSize="14dp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>